--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx puppeteer install"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^129.0.0",
     "next": "15.1.3",
-    "puppeteer": "^23.11.1",
+    "puppeteer-core": "^23.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
